# shackle

./: package-lock.json  package.json  print.html  searchindex.js  searchindex.json
.github/workflows/: tree-sitter.yml
compilation/ast/: ast.html
crates/shackle/: Cargo.toml
crates/shackle-compiler/src/: file.rs
crates/shackle-compiler/src/syntax/: ast.rs  mod.rs
crates/shackle-compiler/src/syntax/eprime/: domain.rs  expression.rs  item.rs
crates/shackle-compiler/src/syntax/xcsp3/: mod.rs
crates/shackle-ls/src/: db.rs
crates/shackle-ls/src/handlers/: mod.rs  view_ast.rs
crates/shackle/src/: file.rs  lib.rs  utils.rs
crates/shackle/src/hir/: db.rs  source.rs  types.rs
crates/shackle/src/hir/lower/: expression.rs  item.rs  mod.rs  test.rs
crates/shackle/src/hir/typecheck/: test.rs  toposort.rs
crates/shackle/src/syntax/: ast.rs  db.rs  mod.rs
crates/shackle/src/thir/: sanity_check.rs
docs/src/Essence'/: essence.md
parsers/tree-sitter-ampl/: grammar.js
parsers/tree-sitter-ampl/corpus/: expressions.txt  literals.txt
parsers/tree-sitter-ampl/src/: grammar.json  node-types.json  parser.c
parsers/tree-sitter-eprime/: grammar.js
parsers/tree-sitter-xcsp3/: Cargo.toml  binding.gyp  grammar.js  package.json
parsers/tree-sitter-xcsp3/bindings/node/: binding.cc  index.js
parsers/tree-sitter-xcsp3/bindings/rust/: lib.rs
parsers/tree-sitter-xcsp3/corpus/: expressions.txt  items.txt  source_file.txt
parsers/tree-sitter-xcsp3/src/: grammar.json  node-types.json  parser.c
share/minizinc/: compat.mzn
(+22 files in other folders)
