[package]
name = "tree-sitter-xcsp3"
description = "XCSP3 grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = ["Nathan B. Hay <nathanblhay@gmail.com>"]
license = "MPL-2.0"
keywords = ["incremental", "parsing", "xcsp3"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/shackle-rs/shackle"

edition = "2023"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
